--- a/actionsupgrader.csproj
+++ b/actionsupgrader.csproj
@@ -5,6 +5,16 @@
     <TargetFramework>net8.0</TargetFramework>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <Nullable>enable</Nullable>
+    <AnalysisMode>All</AnalysisMode>
+    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
+    <AnalysisLevelStyle>preview</AnalysisLevelStyle>
+    <NoWarn>CA1031,CA1050,CA1052,CA1056,CA1062,CA1303,CA1305,CA1307,CA1310,CA1707,CA1805,CA1819,CA1820,CA1848,CA1849,CA1852,CA2007,CA2201,CA2234,IDE0005,IDE0008,IDE0040,IDE0044,IDE0051,IDE0058,IDE0078,IDE0210,IDE1006</NoWarn>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
+  </ItemGroup>
 
 </Project>
