--- a/src/actionsupgrader.csproj
+++ b/src/actionsupgrader.csproj
@@ -2,19 +2,19 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <Nullable>enable</Nullable>
     <AnalysisMode>All</AnalysisMode>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
     <AnalysisLevelStyle>preview</AnalysisLevelStyle>
-    <NoWarn>CA1031,CA1050,CA1052,CA1056,CA1303,CA1305,CA1307,CA1310,CA1707,CA1820,CA1848,CA1849,CA1852,CA2007,CA2201,CA2234,IDE0005,IDE0008,IDE0040,IDE0210,IDE1006</NoWarn>
+    <NoWarn>CA1031,CA1050,CA1052,CA1056,CA1303,CA1305,CA1307,CA1310,CA1515,CA1707,CA1820,CA1848,CA1849,CA1852,CA1873,CA2007,CA2201,CA2234,IDE0005,IDE0008,IDE0040,IDE0210,IDE1006</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="10.0.1" />
   </ItemGroup>
 
 </Project>
